<resources>
    <string name="app_name">Go Biker</string>

    <!--    COMMON -->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="success">Success!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>


    <!--    HOME    -->
    <string name="feed">Feed</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="rides">Rides</string>
    <string name="challenges">Challenges</string>
    <string name="profile">Profile</string>
    <string name="find_friends">Search</string>


    <!--    MAP -->
    <string name="speed">Speed</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="add_directions">Add Direction</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>


    <!--    PROFILE     -->
    <string name="edit_prof">Edit profile</string>
    <string name="hometown">Hometown</string>
    <string name="name">Name</string>
    <string name="change_prof_pic">Change profile picture</string>

    <!-- GROUP -->
    <string-array name="group_type">
        <item>Private</item>
        <item>Public</item>
    </string-array>
    <string name="group_details">Group Details</string>

    <!--    LOGIN SCREEN STRINGS -->
    <string name="title_activity_main_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connect_with">Or connect with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="no_account_q">"Don't have an account? Sign up now!"</string>
    <string name="forgot_password">"Forgot Password?"</string>

    <!--    CREATE ACCCOUNT STRINGS -->

    <string name="create_an_acc">Create an account</string>
    <string name="phone_num">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="alrdy_have_acc">I already have an account</string>
    <string name="continue_reg">Continue Registration</string>
    <string name="cancel_reg">Cancel Registration</string>
    <string name="verify_acc">Verify your account</string>
    <string name="enter_verification_email">Please enter the verification code we sent to your email</string>
    <string name="enter_verification_sms">Please enter the verification code we sent to your mobile number</string>
    <string name="account_verified">Account Verified</string>

    <!--    RESET PASSWORD -->
    <string name="pls_enter_email">Please enter your email address.</string>
    <string name="pls_enter_sms">Please enter your phone number.</string>
    <string name="email_sent">Email sent!</string>
    <string name="sms_sent">SMS sent!</string>
    <string name="pls_check_email">Please check your email to reset your password.</string>
    <string name="pls_check_sms">Please check your phone to reset your password.</string>
    <string name="rmb_password">I remember my password</string>
    <string name="reset_pw">Reset your password</string>
    <string name="title_activity_nav">Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_feed">Feed</string>
    <string name="title_message">Messages</string>
    <string name="title_map">Map</string>
    <string name="create_post">Create Post</string>
    <string name="update_post">Update Post</string>
    <string name="post">Edit Post</string>
    <string name="update_profile">Update Profile</string>
    <string name="save">Save</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where_to_go">Where to go?</string>
    <string name="start_point_nav">Enter start point (your location by default)</string>
    <string name="end_point_nav">Enter end point</string>
    <string name="start_nav_btn">Let\'s go!</string>

    <!--    ACCOUNT -->

    <string name="my_info">My information</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="biometrics">Biometrics</string>
    <string name="personal_info">Personal Info</string>
    <string name="note_account_info">NOTE: For accurate results, please enter your HEIGHT, WEIGHT, and AGE. This is for calorie counter for bicycle use.</string>
    <string name="add_pic">Add picture</string>
    <string name="ride">Ride</string>
    <string name="ride_s">Ride(s)</string>
    <string name="type">Type</string>
    <string name="ride_type">Bike / Motor</string>
    <string name="level">Level</string>
    <string name="distance_traveled">Distance Travelled</string>
    <string name="create_profile">Create Profile</string>
    <string name="current_location">Current Location</string>
    <string name="no_of_rides">No. of Rides</string>

    <string-array name="create_room_options">
        <item>Private</item>
        <item>Group</item>
        <item>Public</item>
    </string-array>

    <string name="facebook_app_id">821445725297008</string>
    <string name="fb_login_protocol_scheme">fb821445725297008</string>
    <string name="server_client_id">1037765640253-i447v1pt24i0mje6c9te4r0skfu9jr28.apps.googleusercontent.com</string>

</resources>
