<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/where_to_go"
        android:textSize="40sp"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:focusable="false"
        android:id="@+id/startPointNav"
        android:hint="@string/start_point_nav"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/endPointNav"
        android:focusable="false"
        android:hint="@string/end_point_nav"
        />

    <Button
        android:id="@+id/letsgo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/start_nav_btn" />

</LinearLayout>