<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.MainLoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                app:srcCompat="@drawable/main_logo_wbg" />


            <EditText
                android:id="@+id/username"
                style="@style/CustomTextInput.Dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/login_password"
                style="@style/CustomTextInput.Dark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/continueLogin"
                style="@style/TransparentBtn.Primary"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="20dp"
                android:text="@string/action_sign_in" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/connect_with"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/SocialBtn.FB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/facebook" />

                <Button
                    style="@style/SocialBtn.Google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/google" />
            </LinearLayout>

            <Button
                android:id="@+id/login_no_account"
                style="@style/TransparentBtn.Negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_account_q" />

            <Button
                android:id="@+id/login_forgot_pass"
                style="@style/TransparentBtn.Negative"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/forgot_password" />


            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <!--    <LinearLayout-->
    <!--        android:id="@+id/frameLayout"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="200dp"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/loading"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/imageView">-->


</androidx.constraintlayout.widget.ConstraintLayout>