<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            style="@style/Headings.H1"
            android:text="@string/forgot_password"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            style="@style/Subtitle.H3"
            android:text="@string/pls_enter_email"/>

        <EditText
            android:id="@+id/reset_password_EMAIL"
            style="@style/CustomTextInput.Dark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp" />

        <Button
            android:id="@+id/reset_password_email_button"
            style="@style/SecondaryBtn.Positive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/next" />

        <Button
            android:id="@+id/reset_password_remember_button"
            style="@style/TransparentBtn.Positive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rmb_password" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>