<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|center"
        android:orientation="vertical"
        android:paddingHorizontal="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pw"
            style="@style/Headings.H2"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/CustomTextInput.Dark"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/CustomTextInput.Dark"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/SecondaryBtn.Positive"
            android:text="@string/done"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>