<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotEmailSent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/ico_success_dark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_sent"
            style="@style/Headings.H1"
            android:textColor="@color/colorPrimary"
            android:layout_marginVertical="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pls_check_email"
            style="@style/Subtitle.H2"
            android:textColor="@color/black"
            android:textAlignment="center"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/SecondaryBtn.Positive"
            android:text="@string/ok"
            android:layout_marginTop="50dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>