<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessVerification"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ico_success"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:layout_gravity="center"
            style="@style/Headings.H2"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_verified"
            android:layout_gravity="center"
            style="@style/Subtitle.H2"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginTop="150dp"
            style="@style/SecondaryBtn.Negative"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>