<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="60dp"
        android:paddingVertical="120dp"
        android:baselineAligned="false"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verify_acc"
            style="@style/Headings.H1"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textAlignment="center"
            style="@style/Subtitle.H3"
            android:text="@string/enter_verification_email"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            style="@style/Headings.H5"
            android:textColor="@color/white"
            android:text="+9876"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_marginHorizontal="40dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            style="@style/CustomTextInput.Dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_reg"
                android:layout_marginBottom="8dp"
                style="@style/SecondaryBtn.Negative"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_reg"

                style="@style/TransparentBtn.Negative"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>