<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CreateAccount">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="120dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_an_acc"
            android:layout_marginBottom="30dp"
            style="@style/Headings.H4"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/prompt_email" />

            <EditText
                android:id="@+id/register_email"
                style="@style/CustomTextInput.Dark"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/phone_num" />

            <EditText
                android:id="@+id/register_phone"
                style="@style/CustomTextInput.Dark"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/prompt_password" />

            <EditText
                android:id="@+id/register_password"
                style="@style/CustomTextInput.Dark"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/register_confirmpassword"
                style="@style/CustomTextInput.Dark"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="25dp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/register_next_button"
                style="@style/SecondaryBtn.Negative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"></Button>

            <Button
                android:id="@+id/register_login_button"
                style="@style/TransparentBtn.Negative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/alrdy_have_acc"></Button>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>